rhai/codegen/ui_tests/rhai_mod_path_attr.stderr
error: expecting attribute name
  --> $DIR/rhai_mod_path_attr.rs:11:12
   |
11 | #[rhai_mod(rhai::name = "thing")]
   |            ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_mod_path_attr.rs:24:8
   |
24 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
